--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,1 +1,40 @@
 spring.application.name=auth-service
+
+server.port=${SERVER_PORT:8081}
+server.servlet.context-path=${SERVER_SERVLET_CONTEXT_PATH:/auth}
+
+# PostgreSQL Configura
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:auth_db}
+spring.datasource.username=${POSTGRES_USER:postgres}
+spring.datasource.password=${POSTGRES_PASSWORD:123456}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.hikari.connection-timeout=${DATASOURCE_CONNECTION_TIMEOUT:120000}
+spring.datasource.hikari.maximum-pool-size=${DATASOURCE_MAX_POOL_SIZE:5}
+spring.datasource.hikari.minimum-idle=1
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.sql.init.mode=never
+spring.sql.init.schema-locations=classpath:backup.sql
+
+# Logging
+logging.level.org.springframework.web=${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_WEB:INFO}
+logging.level.org.hibernate=ERROR
+logging.level.com.zaxxer.hikari=DEBUG
+
+# Web Configuration
+spring.main.web-application-type=servlet
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# JWT Configuration
+app.jwt.secret=${JWT_SECRET}
+app.jwt.expiration=${JWT_EXPIRATION:86400000}
+
+# RabbitMQ
+spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=${RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${RABBITMQ_USERNAME:guest}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
