--- a/posting-service/src/main/resources/application.properties
+++ b/posting-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=${SERVER_PORT:8082}
 server.servlet.context-path=${SERVER_SERVLET_CONTEXT_PATH:/posting}
 
 # PostgreSQL Configura
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:posting_db}
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5433}/${DB_NAME:posting_db}
 spring.datasource.username=${POSTGRES_USER:postgres}
 spring.datasource.password=${POSTGRES_PASSWORD:123456}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -37,3 +37,25 @@ spring.rabbitmq.host=${RABBITMQ_HOST:localhost}
 spring.rabbitmq.port=${RABBITMQ_PORT:5672}
 spring.rabbitmq.username=${RABBITMQ_USERNAME:guest}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD:guest}
+
+# RabbitMQ Queue Names
+posting.queue.orders=posting.orders
+posting.queue.order-updates=posting.order-updates
+posting.queue.menu-updates=posting.menu-updates
+
+# Actuator Configuration
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
+management.health.rabbitmq.enabled=true
+management.health.db.enabled=true
+management.health.diskspace.enabled=true
+management.health.defaults.enabled=true
+
+# Health Check Groups
+management.health.group.readiness.include=db,rabbitmq
+management.health.group.liveness.include=ping
+
+# Redis Configuration
+spring.data.redis.host=${REDIS_HOST:redis}
+spring.data.redis.port=${REDIS_PORT:6379}
+spring.data.redis.timeout=60000
