--- a/posting-service/Dockerfile
+++ b/posting-service/Dockerfile
@@ -6,17 +6,17 @@ RUN mvn clean package -DskipTests
 FROM openjdk:17-jdk-slim
 WORKDIR /app
 RUN apt-get update && apt-get install -y curl
-COPY --from=build /app/target/domain1-0.0.1-SNAPSHOT.jar app.jar
-
+COPY --from=build /app/target/posting-service-0.0.1-SNAPSHOT.jar app.jar
 
 ARG JWT_SECRET
 ARG JWT_EXPIRATION=86400000
 ARG SERVER_PORT=8082
+ARG REDIS_HOST=redis
 
 ENV JWT_SECRET=${JWT_SECRET}
 ENV JWT_EXPIRATION=${JWT_EXPIRATION}
 ENV TZ=Asia/Ho_Chi_Minh
-
+ENV REDIS_HOST=${REDIS_HOST}
 
 HEALTHCHECK --interval=30s --timeout=5s --start-period=60s --retries=3 \
   CMD curl -f http://localhost:8082/posting/actuator/health || exit 1
