--- a/posting-service/Dockerfile
+++ b/posting-service/Dockerfile
@@ -8,15 +8,12 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y curl
 COPY --from=build /app/target/posting-service-0.0.1-SNAPSHOT.jar app.jar
 
-ARG JWT_SECRET
-ARG JWT_EXPIRATION=86400000
-ARG SERVER_PORT=8082
-ARG REDIS_HOST=redis
-
-ENV JWT_SECRET=${JWT_SECRET}
-ENV JWT_EXPIRATION=${JWT_EXPIRATION}
+# Set default values for environment variables
+ENV JWT_SECRET=${JWT_SECRET:-default_secret_key_do_not_use_in_production}
+ENV JWT_EXPIRATION=${JWT_EXPIRATION:-86400000}
+ENV SERVER_PORT=${SERVER_PORT:-8082}
 ENV TZ=Asia/Ho_Chi_Minh
-ENV REDIS_HOST=${REDIS_HOST}
+ENV REDIS_HOST=${REDIS_HOST:-redis}
 
 HEALTHCHECK --interval=30s --timeout=5s --start-period=60s --retries=3 \
   CMD curl -f http://localhost:8082/posting/actuator/health || exit 1
