--- a/posting-service/src/main/resources/application.properties
+++ b/posting-service/src/main/resources/application.properties
@@ -22,14 +22,26 @@ spring.sql.init.schema-locations=classpath:backup.sql
 logging.level.org.springframework.web=${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_WEB:INFO}
 logging.level.org.hibernate=ERROR
 logging.level.com.zaxxer.hikari=DEBUG
+logging.level.khuong.com.postingservice=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.khuong.com.postingservice.configs.security=DEBUG
+logging.level.khuong.com.postingservice.configs.jwt=DEBUG
 
 # Web Configuration
 spring.main.web-application-type=servlet
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.location=${java.io.tmpdir}
+
+# Cloudinary Configuration
+cloudinary.cloud-name=${CLOUDINARY_CLOUD_NAME:decz34g1a}
+cloudinary.api-key=${CLOUDINARY_API_KEY:325126569821533}
+cloudinary.api-secret=${CLOUDINARY_API_SECRET:wqcbw8JTOaND-yfguO_6p8NhwHc}
 
 # JWT Configuration
-app.jwt.secret=${JWT_SECRET}
+app.jwt.secret=${JWT_SECRET:bQeThWmZq4t7w!z$C&F)J@NcRfUjXn2r5u8x/A?D*G-KaPdSgVkYp3s6v9y$B&E)}
 app.jwt.expiration=${JWT_EXPIRATION:86400000}
 
 # RabbitMQ
