--- a/posting-service/.gitignore
+++ b/posting-service/.gitignore
@@ -1,4 +1,8 @@
 HELP.md
+PRODUCTION.md
+POSTMAN-COLLECTION.md
+API-DOCUMENTATION.md
+
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
