--- a/posting-service/src/main/resources/application.properties
+++ b/posting-service/src/main/resources/application.properties
@@ -73,3 +73,9 @@ spring.data.redis.port=6379
 spring.data.redis.timeout=60000
 
 spring.cache.type=none
+spring.jpa.open-in-view=true
+
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
