--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -247,7 +247,7 @@ services:
       posting-service:
         condition: service_healthy
     environment:
-      - API_URL=https://${DOMAIN_NAME}
+      - API_URL=https://truongvinhkhuong.io.vn
       - AUTH_API_PATH=/auth
       - POSTING_API_PATH=/posting
       - NODE_ENV=production
