--- a/posting-service/src/main/resources/application.properties
+++ b/posting-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=${SERVER_PORT:8082}
 server.servlet.context-path=${SERVER_SERVLET_CONTEXT_PATH:/posting}
 
 # PostgreSQL Configura
-spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5433}/${DB_NAME:posting_db}
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5433}/${DB_NAME:posting_db}?autoCommit=false
 spring.datasource.username=${POSTGRES_USER:postgres}
 spring.datasource.password=${POSTGRES_PASSWORD:123456}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -11,6 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.hikari.connection-timeout=${DATASOURCE_CONNECTION_TIMEOUT:120000}
 spring.datasource.hikari.maximum-pool-size=${DATASOURCE_MAX_POOL_SIZE:5}
 spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.auto-commit=false
 
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
@@ -79,3 +80,6 @@ spring.jackson.serialization.fail-on-empty-beans=false
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
+
+# Configure transaction settings
+spring.transaction.default-timeout=60
