--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -23,6 +23,8 @@ spring.sql.init.schema-locations=classpath:backup.sql
 logging.level.org.springframework.web=${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_WEB:INFO}
 logging.level.org.hibernate=ERROR
 logging.level.com.zaxxer.hikari=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.khuong.com.authservice.security=DEBUG
 
 # Web Configuration
 spring.main.web-application-type=servlet
